[gd_scene load_steps=3 format=3 uid="uid://cg67x7v7f5c05"]

[ext_resource type="Script" path="res://scripts/TextBox.gd" id="1_ak5rm"]
[ext_resource type="FontFile" uid="uid://c1114d7vgm2up" path="res://assets/fonts/Helvetica Neue Condensed Bold.ttf" id="5_02pio"]

[node name="TextBox" type="MarginContainer"]
z_index = 1000
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -30.5
offset_right = 10.0
offset_bottom = 30.5
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(5, 30)
theme_override_constants/margin_left = 0
script = ExtResource("1_ak5rm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_02pio")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/Label"]
visibility_layer = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="resized" from="MarginContainer" to="." method="_on_margin_container_resized"]
[connection signal="mouse_entered" from="MarginContainer/Label/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Label/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Label/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
